# holotrack-holosolver

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Holosolver/config/: config_ecoli.yaml  config_hyper.yaml
Holosolver/holograms/: Hypertonic_RBC.tif  Hypotonic_RBC.tif
Holosolver/src/torchholo/: optim.py
Simulator/: QUICK_START.md  __init__.py  visualizer_2026.py
Simulator/libs/: CCL3D.py  focus.py  propagation.py  simu_hologram.py
Simulator/simu bact GUI/: parameters_simu_bact.json  processing_result.json  processing_status.json
Simulator/simu bact GUI/2026_03_03_17_37_08/: parameters_simu_bact.json
Simulator/simu bact GUI/2026_03_04_09_06_26/: parameters_simu_bact.json
Simulator/simu bact GUI/2026_03_04_09_08_26/: parameters_simu_bact.json
Simulator/simu holo/: main_simu_hologram.py
Simulator/simu holo/configs/: config_bacteria_list.json  config_bacteria_random.json  config_sphere_list.json  config_sphere_random.json  config_template.json
Simulator/visualizer/: visualizer.py
Visualizer/: get_res.bash
holotrack_model/: config.yaml  config_ecoli.yaml  pyproject.toml  requirements.txt  run.batch
holotrack_model/config/: config.py  config.yaml  config_ecoli.yaml  config_hyper.yaml  config_hypo.yaml  config_isotonic_rbc.yaml  config_run2.yaml  config_run3.yaml
holotrack_model/holograms/: ABC.tif  E_coli.tif  Ellipsoid.tif  Isotonic_RBC.tif  M_protocystis.tif  config.txt
holotrack_model/src/torchholo/: data.py  main.py  optim.py  utils.py
visualizer/: get_res.bash  visualizer.py
(+49 files in other folders)
