[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Holotrack"
version = "0.1.0"
description = "Deep learning-based 3D localization and tracking of bacteria using digital holography."
requires-python = ">=3.10"
authors = [
{name = "Erwan Gouriou", email = "[erwan.gouriou@student-cs.fr](mailto:erwan.gouriou@student-cs.fr)"},
{name = "Louis Bonnecaze", email = "[louis.bonnecaze@student-cs.fr](mailto:louis.bonnecaze@student-cs.fr)"}
]

dependencies = [
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "torchinfo>=1.8.0",
    "PyYAML>=6.0.3"
]

